[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/mutant_crab.png" type="Texture" id=1]
[ext_resource path="res://util/FCTManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character.gd" type="Script" id=3]
[ext_resource path="res://util/AI_Manager.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Character" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Tween" type="Tween" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="FCTManager" parent="." instance=ExtResource( 2 )]

[node name="AI_Manager" parent="." instance=ExtResource( 4 )]
[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
